--- a/domain_path.info.yml
+++ b/domain_path.info.yml
@@ -1,5 +1,6 @@
 name: Domain Path
 type: module
+package: Domain
 description: 'Allow the same path to be used across different domains.'
 core: 8.x
 
